--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="robots" content="noindex, nofollow">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>広島大学 アンケート調査サイト</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
@@ -15,7 +16,8 @@
     <div class="header-banner">
         <div class="organization-name">広島大学</div>
         <div class="site-content">アンケート調査</div>
-        <div class="research-title">慢性的な痛みに対する心理・身体・脳からの多面的解明研究へ参加される皆様へ</div>
+        <div class="research-title desktop-only">慢性的な痛みに対する心理・身体・脳からの多面的解明研究へ参加される皆様へ</div>
+        <div class="research-title mobile-only">慢性的な痛みに対する<br>心理・身体・脳からの<br>多面的解明研究へ参加<br>される皆様へ</div>
     </div>
     <div id="content" style="display:none;">
         <div id="displayId" class="id-display"></div>
@@ -41,9 +43,14 @@
 
     <div class="contact-info">
         <h3>連絡先</h3>
-        <p>広島大学<br>保健管理センター，脳・こころ・感性科学研究センター<br>准教授 吉野敦雄<br>メール: <a
-                href="mailto:yoshino@hiroshima-u.ac.jp">yoshino@hiroshima-u.ac.jp</a></p>
+        <p>広島大学<br>
+            <span class="desktop-only">保健管理センター，脳・こころ・感性科学研究センター</span>
+            <span class="mobile-only">保健管理センター<br>脳・こころ・感性科学研究センター</span>
+            准教授 吉野敦雄<br>
+            メール: <a href="mailto:yoshino@hiroshima-u.ac.jp">yoshino@hiroshima-u.ac.jp</a>
+        </p>
     </div>
+
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
